--- a/products/index.html
+++ b/products/index.html
@@ -18,7 +18,7 @@
 
     <!--Bootstrap CSS-->
     <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="../css/_products.css" rel="stylesheet" type="text/css">
+    <link href="../css/sites/products.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
     <script src="../js/bootstrap.js"></script>
 </head>
