--- a/404.html
+++ b/404.html
@@ -34,10 +34,10 @@
         <p>
             Can't find what you are looking for!
         </p>
-        <img src="img/404/han-solo.gif">
-        <img src="img/404/chewbacca.gif">
+        <img src="/img/404/han-solo.gif">
+        <img src="/img/404/chewbacca.gif">
         <div class="w-100"></div>
-        <img src="img/404/boom.gif">
+        <img src="/img/404/boom.gif">
     </div>
 </main>
 
