--- a/modules/header.html
+++ b/modules/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="col-2">
             <a class="navbar-brand" href="/">
-                <img style="height: 2.2rem;" src="../img/header/parcivad.png" alt="brand">
+                <img style="height: 2.2rem;" src="/img/header/parcivad.png" alt="brand">
             </a>
         </div>
         <div class="col-8 gx-2 collapse navbar-collapse justify-content-end" id="navbar">
