--- a/404.html
+++ b/404.html
@@ -10,14 +10,14 @@
           content="404 page not found">
     <title>Parcivad | :C</title>
     <!--Favicon-->
-    <link href="img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-    <link href="img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-    <link href="img/favicon_io/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-    <link href="img/favicon_io/site.webmanifest" rel="manifest">
+    <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="/img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="/img/favicon_io/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+    <link href="/img/favicon_io/site.webmanifest" rel="manifest">
     <!--Bootstrap CSS-->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js"></script>
 </head>
 <body>
 
@@ -44,11 +44,11 @@
 <!-- Footer Area module load via js -->
 <footer id="footer"></footer>
 
-<script src="js/jquery-3.6.0.min.js"></script>
+<script src="/js/jquery-3.6.0.min.js"></script>
 <script>
     $(function () {
-        $("#header").load("modules/header.html");
-        $("#footer").load("modules/footer.html");
+        $("#header").load("/modules/header.html");
+        $("#footer").load("/modules/footer.html");
     });
 </script>
 
