--- a/products/index.html
+++ b/products/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Parcivad | Start</title>
     <!--Favicon Icons-->
-    <link href="../img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-    <link href="../img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-    <link href="../img/favicon_io/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-    <link href="../img/favicon_io/site.webmanifest" rel="manifest">
+    <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="/img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+    <link href="/img/favicon_io/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
+    <link href="/img/favicon_io/site.webmanifest" rel="manifest">
 
     <!--Description Meta tags-->
     <meta name="title" content="Parcivads Website">
@@ -17,10 +17,10 @@
           content="Parcivad.de is a website to use tools from parcivad">
 
     <!--Bootstrap CSS-->
-    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="../css/sites/products.css" rel="stylesheet" type="text/css">
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/css/sites/products.css" rel="stylesheet" type="text/css">
     <!--Java Script-->
-    <script src="../js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js"></script>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
     <div class="container px-4 md-3 article-area">
         <div class="row align-items-lg-center">
             <div class="col-7 mx-auto col-md-5 order-1 col-lg-5">
-                <img class="d-block" style="height: 40rem;" alt="minecraft obi block" src="../img/home/tower.svg">
+                <img class="d-block" style="height: 40rem;" alt="minecraft obi block" src="/img/home/tower.svg">
             </div>
             <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
                 <h1 class="title-de">
@@ -51,11 +51,11 @@
 <!-- Footer Area module load via js -->
 <footer id="footer"></footer>
 
-<script src="../js/jquery-3.6.0.min.js"></script>
+<script src="/js/jquery-3.6.0.min.js"></script>
 <script>
     $(function () {
-        $("#header").load("../modules/header.html");
-        $("#footer").load("../modules/footer.html");
+        $("#header").load("/modules/header.html");
+        $("#footer").load("/modules/footer.html");
     });
 </script>
 
