--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 
     <!--Required Meta-->
@@ -32,7 +32,7 @@
             404 <span>Error</span>
         </h1>
         <p>
-            Can't find what you are looking for!
+            Okaay keine Ahnung wie du hier gelandet bist?!
         </p>
         <img src="/img/404/han-solo.gif">
         <img src="/img/404/chewbacca.gif">
