--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <!--Required Meta-->
     <meta charset="UTF-8">
@@ -40,9 +40,9 @@
                     Parcivad launched in the <span>Web</span>
                 </h1>
                 <p>
-                    Bib bub Bap! This is the site of Timur Stegmann, aka Parcivad. Here you can find new information,
-                    data or tools about ongoing or coming projects. For a more code and programming based look around
-                    please change to my github Account.
+                    Bib bub Bap! Diese Seite gehört Timur Stegmann, aka. Parcivad. Hier findest du immer neue Informationen,
+                    Daten oder Tools für verschiedene Zwecke. Für eine mehr Code basierte Umschau
+                    kannst du auf meinem Github vorbeischauen.
                 </p>
             </div>
         </div>
@@ -60,9 +60,10 @@
                         Minecraft Server Data
                     </h1>
                     <p>
-                        soon there will be data delivered from the minecraft server <span>(callable via api)</span>.
-                        You will be able to see online/afk times of players. Most Chunks loaded and maybe a 3D world
-                        perspective.
+                        die Plugin Infrastruktur von dem Minecraft Server ist jetzt schon in eine
+                        <a href="https://mongodb.com" class="link-dark">MongoDB</a>
+                        eingebunden. Die vielleicht auch über diese Website. Für Plugin- bzw. Funktionsvorschläge
+                        kannst du dich bei mir auf dem Discord Server melden.
                     </p>
                 </div>
             </div>
