--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
 <!-- Header Area module load via js -->
-<header id="header"></header>
+<header class="sticky-top" id="header"></header>
 
 <!-- Content of the page -->
 <main>
@@ -61,7 +61,7 @@
                     </h1>
                     <p>
                         die Plugin Infrastruktur von dem Minecraft Server ist jetzt schon in eine
-                        <a href="https://mongodb.com" class="link-dark">MongoDB</a>
+                        <a href="https://mongodb.com" class="link-info">MongoDB Datenbank</a>
                         eingebunden. Die vielleicht auch über diese Website. Für Plugin- bzw. Funktionsvorschläge
                         kannst du dich bei mir auf dem Discord Server melden.
                     </p>
