--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
             404 <span>Error</span>
         </h1>
         <p>
-            Okaay keine Ahnung wie du hier gelandet bist?!
+            OkBrudiMongo keine Ahnung wie du hier gelandet bist?!
         </p>
         <img src="/img/404/han-solo.gif">
         <img src="/img/404/chewbacca.gif">
