--- a/modules/footer.html
+++ b/modules/footer.html
@@ -2,12 +2,10 @@
     <div class="container">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Start</a></li>
-            <li class="nav-item"><a href="/stream" class="nav-link px-2 text-muted">Stream</a></li>
+            <li class="nav-item"><a href="/school/" class="nav-link px-2 text-muted">School Shit</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Social</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Arena</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Tools</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Parcivad Projects</a></li>
+            <li class="nav-item"><a href="/products/" class="nav-link px-2 text-muted">Parcivad Products</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">End</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Timur Stegmann</p>
