--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 <body>
 
 <!-- Header Area module load via js -->
-<header id="header"></header>
+<header class="sticky-top" id="header"></header>
 
 <!-- Content of the page -->
 <main>
