--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     Parcivad launched in the <span>Web</span>
                 </h1>
                 <p>
-                    Bib bub Bap! Diese Seite gehört Timur Stegmann, aka. Parcivad. Hier findest du immer neue Informationen,
-                    Daten oder Tools für verschiedene Zwecke. Für eine mehr Code basierte Umschau
-                    kannst du auf meinem Github vorbeischauen.
+                    Diese Seite gehört Parcivad, aka Timur Stegmann. Hier kannst du Information über neue Projekte,
+                    Produkte oder andere Tools und Daten  finden. Falls du dich mehr für die Programmierung
+                    interessiert kannst du dich auf meinem Github Konto umsehen.
                 </p>
             </div>
         </div>
@@ -60,16 +60,33 @@
                         Minecraft Server Data
                     </h1>
                     <p>
-                        die Plugin Infrastruktur von dem Minecraft Server ist jetzt schon in eine
-                        <a href="https://mongodb.com" class="link-info">MongoDB Datenbank</a>
-                        eingebunden. Die vielleicht auch über diese Website. Für Plugin- bzw. Funktionsvorschläge
-                        kannst du dich bei mir auf dem Discord Server melden.
+                        Der Minecraft Server steht auf Anfrage für jeden offen. Das Projekt hinter dem Server hat kein
+                        konkretes Ziel.
+                    </p>
+                    <p>
+                        Im moment wird an neuen Features und Funktionen gearbeitet. Bei Vorschlägen und Ideen kannst
+                        du dich auf dem Discord Server melden.
                     </p>
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid article-mc-end"></div>
+    <!--Latin Vocabulary List Article-->
+    <div class="container-fluid">
+        <div class="container px-4 md-3 article-area">
+            <div class="row align-items-lg-center">
+                <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
+                    <h1 class="title-de">
+                        Latin Vocabulary
+                    </h1>
+                    <p>
+                        Die Latein Vokablen für die Tests können jetzt unter dem Reiter School eingesehen werden.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 
 <!-- Footer Area module load via js -->
