--- a/modules/header.html
+++ b/modules/header.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" href="/">Start</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/school/">School Shit</a>
+                    <a class="nav-link" href="/school/">School</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Social</a>
