--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
                     <h1 class="title-de">
-                        Minecraft Server Data
+                        Minecraft Server
                     </h1>
                     <p>
                         Der Minecraft Server steht auf Anfrage für jeden offen. Das Projekt hinter dem Server hat kein
