--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="/img/favicon_io/site.webmanifest" rel="manifest">
 
     <!--Description Meta tags-->
-    <meta name="title" content="Parcivads Website">
+    <meta name="title" content="Parcivad's Website">
     <meta name="description"
-          content="Parcivad.de is a website to use tools from parcivad">
+          content="Parcivad.de is a website to use tools or data from parcivad ;D">
 
     <!--Bootstrap CSS-->
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -53,7 +53,7 @@
         <div class="container px-4 md-3 article-area text-light bg-dark">
             <div class="row align-items-lg-center">
                 <div class="col-7 mx-auto col-md-5 order-1 col-lg-5">
-                    <img class="d-block" style="height: 40rem;" alt="minecraft obi block" src="/img/home/tower.svg">
+                    <img class="d-block" style="height: 40rem;" alt="minecraft tower" src="/img/home/tower.svg">
                 </div>
                 <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
                     <h1 class="title-de">
@@ -65,7 +65,7 @@
                     </p>
                     <p>
                         Im moment wird an neuen Features und Funktionen gearbeitet. Bei Vorschlägen und Ideen kannst
-                        du dich auf dem Discord Server melden.
+                        du dich gerne auf dem Discord Server kundgeben.
                     </p>
                 </div>
             </div>
@@ -76,9 +76,12 @@
     <div class="container-fluid">
         <div class="container px-4 md-3 article-area">
             <div class="row align-items-lg-center">
-                <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
+                <div class="col-7 mx-auto col-md-5 order-md-2 col-lg-5">
+                    <img class="" width="100%" alt="minecraft obi block" src="/img/home/book.gif">
+                </div>
+                <div class="col-md-9 order-md-1 col-lg-7 align-items-center text-md-start">
                     <h1 class="title-de">
-                        Latin Vocabulary
+                        Latin <span>Vocabulary</span>
                     </h1>
                     <p>
                         Die Latein Vokablen für die Tests können jetzt unter dem Reiter School eingesehen werden.
