--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
             </div>
         </div>
     </div>
+    <!--Latin Vocabulary List Article-->
+    <div class="container-fluid" style="margin-top: 12px">
+        <div class="container px-4 md-3 article-area">
+            <div class="row align-items-lg-center">
+                <div class="col-7 mx-auto col-md-5 col-lg-5">
+                    <img class="" width="100%" alt="animated book gif" src="/img/home/book.gif">
+                </div>
+                <div class="col-md-9  col-lg-7 align-items-center text-md-start">
+                    <h1 class="title-de">
+                        Latin <span>Vocabulary</span>
+                    </h1>
+                    <p>
+                        Die Latein Vokablen für die Tests können jetzt unter dem Reiter School eingesehen werden.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--Minecraft Article-->
     <div class="container-fluid article-mc-start"></div>
     <div class="container-fluid bg-dark">
@@ -72,24 +90,6 @@
         </div>
     </div>
     <div class="container-fluid article-mc-end"></div>
-    <!--Latin Vocabulary List Article-->
-    <div class="container-fluid">
-        <div class="container px-4 md-3 article-area">
-            <div class="row align-items-lg-center">
-                <div class="col-7 mx-auto col-md-5 order-md-2 col-lg-5">
-                    <img class="" width="100%" alt="minecraft obi block" src="/img/home/book.gif">
-                </div>
-                <div class="col-md-9 order-md-1 col-lg-7 align-items-center text-md-start">
-                    <h1 class="title-de">
-                        Latin <span>Vocabulary</span>
-                    </h1>
-                    <p>
-                        Die Latein Vokablen für die Tests können jetzt unter dem Reiter School eingesehen werden.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
 </main>
 
 <!-- Footer Area module load via js -->
