--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <!--Required Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="/img/favicon_io/apple-touch-icon.png"/>
     <meta name="title" content="Parcivad 404">
     <meta name="description"
           content="404 page not found">
