update preview text

--- a/school/index.html
+++ b/school/index.html
@@ -15,7 +15,7 @@
     <!--Description Meta tags-->
     <meta name="title" content="Parcivad's Website">
     <meta name="description"
-          content="Schul Informationen und Daten präsentiert von Parcivad.de">
+          content="Information und Daten die sich auf das Löwenrot-Gymnasium beziehen.">
 
     <!--Bootstrap CSS-->
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
