add legend to latin

--- a/school/index.html
+++ b/school/index.html
@@ -37,12 +37,21 @@
                 Latin <span>Vocabulary</span>
             </h1>
             <p>
-                Hier findest du die Vokabellisten zu den letzten Tests, sowie dem kommenden Latein Test. Wenn die Liste
-                mit einem grünen Hacken
-                <svg xmlns="http://www.w3.org/2000/svg" color="#58e05c" width="17" height="17" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                Hier findest du die Vokabellisten zu den letzten Tests, sowie dem kommenden Latein Test.
+            </p>
+            <p class="fst-italic" style="font-style: italic; font-size: 1rem;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="green-check bi bi-check-circle-fill" viewBox="0 0 16 16">
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                 </svg>
-                markiert ist wurde sie von HOS bestätigt!
+                Vokabeln bestätigt
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="orange-check bi bi-check-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                </svg>
+                Vokablen nicht bestätigt
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="red-check bi bi-check-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                </svg>
+                Vokabeln noch nicht verfügbar
             </p>
         </div>
     </div>
