rework accordion in latin

--- a/school/index.html
+++ b/school/index.html
@@ -98,7 +98,7 @@
                         Carmen 72 & 99
                     </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="row align-items-lg-center">
                         <div class="col-12 row">
                             <div class="col-6">
