shesh rechtschreib fehler

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                         konkretes Ziel.
                     </p>
                     <p>
-                        Im moment wird an neuen Features und Funktionen gearbeitet. Bei Vorschlägen und Ideen kannst
-                        du dich gerne auf dem Discord Server kundgeben.
+                        Im Moment wird an neuen Features und Funktionen gearbeitet. Bei Vorschlägen und Ideen kannst
+                        du dich gerne auf meinem Discord Server melden.
                     </p>
                 </div>
             </div>
