update new vocabulary

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Description Meta tags-->
     <meta name="title" content="Parcivad's Website">
     <meta name="description"
-          content="Parcivad.de is a website to use tools or data from parcivad ;D">
+          content="A website that provides direct data & information from Löwenrot-Gymnasium and Parcivad activities.">
 
     <!--Bootstrap CSS-->
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
