--- a/school/index.html
+++ b/school/index.html
@@ -61,13 +61,13 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingZero">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseZero" aria-expanded="true" aria-controls="flush-collapseZero">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="red-check bi bi-check-circle-fill" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="orange-check bi bi-check-circle-fill" viewBox="0 0 16 16">
                             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                         </svg>
                         Seneca Texte
                     </button>
                 </h2>
-                <div id="flush-collapseZero" class="accordion-collapse collapse" aria-labelledby="flush-headingZero" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseZero" class="accordion-collapse collapse show" aria-labelledby="flush-headingZero" data-bs-parent="#accordionFlushExample">
                     <div class="row align-items-lg-center">
                         <div class="col-12 row">
                             <div class="col-6">
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <!--iframe src="/files/latin/voc-senc-1-2.pdf" width="100%" height="500px"></iframe-->
+                            <iframe src="/files/latin/voc-senc-1-2.pdf" width="100%" height="500px"></iframe>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         Carmen 72 & 99
                     </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="row align-items-lg-center">
                         <div class="col-12 row">
                             <div class="col-6">
