theme color and layout

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/favicon_io/apple-touch-icon.png"/>
+    <meta name="theme-color" content="#292c2f">
     <title>Parcivad | Start</title>
     <!--Favicon Icons-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
@@ -33,10 +34,10 @@
     <!--Introduction-->
     <div class="container px-4 md-3 title-area" style="padding-top: 2rem;">
         <div class="row align-items-lg-center">
-            <div class="col-7 mx-auto col-md-4 order-md-2 col-lg-5">
+            <div class="col-7 mx-auto col-md-4 order-lg-2 col-lg-5">
                 <img alt="parcivad avatar looking" src="/img/home/parcivad-looking.svg">
             </div>
-            <div class="col-md-9 order-md-1 col-lg-7 text-center text-md-start">
+            <div class="col-md-9 order-lg-1 col-lg-7 text-center text-md-start">
                 <h1>
                     Parcivad launched in the <span>Web</span>
                 </h1>
