--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/favicon_io/apple-touch-icon.png"/>
+    <meta name="theme-color" content="#292c2f">
     <meta name="title" content="Parcivad 404">
     <meta name="description"
           content="404 page not found">
