--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Content of the page -->
 <main>
     <!--Introduction-->
-    <div class="container px-4 md-3 title-area" style="padding-top: 2rem;">
+    <div class="container px-4 md-3 title-area" style="padding-top: 1rem;">
         <div class="row align-items-lg-center">
             <div class="col-7 mx-auto col-md-4 order-lg-2 col-lg-5">
                 <img alt="parcivad avatar looking" src="/img/home/parcivad-looking.svg">
@@ -44,7 +44,9 @@
                 <p>
                     Diese Seite gehört Parcivad, aka Timur Stegmann. Hier kannst du Information über neue Projekte,
                     Produkte oder andere Tools und Daten  finden. Falls du dich mehr für die Programmierung
-                    interessiert kannst du dich auf meinem Github Konto umsehen.
+                    interessiert kannst du dich auf meinem
+                    <a class="custom-link" href="https://github.com/parcivad">Github</a>
+                    Konto umsehen.
                 </p>
             </div>
         </div>
@@ -61,7 +63,9 @@
                         Latin <span>Vocabulary</span>
                     </h1>
                     <p>
-                        Die Latein Vokablen für die Tests können jetzt unter dem Reiter School eingesehen werden.
+                        Die Latein Vokablen für die Tests können jetzt unter dem Reiter
+                        <a class="custom-link" href="/school/">School</a>
+                        eingesehen werden.
                     </p>
                 </div>
             </div>
