--- a/school/index.html
+++ b/school/index.html
@@ -31,8 +31,15 @@
 
 <!-- Content of the page -->
 <main>
-    <!--Introduction-->
     <div class="container px-4 md-3 title-area" style="padding-top: 2rem;">
+        <div class="row align-items-lg-center">
+            <h1>
+                School Menu
+            </h1>
+        </div>
+    </div>
+    <!--Introduction of Latin Menu-->
+    <div class="container px-4 md-3 article-area" style="padding-top: 2rem;">
         <div class="row align-items-lg-center">
             <h1>
                 Latin <span>Vocabulary</span>
@@ -68,7 +75,7 @@
                         Seneca Texte
                     </button>
                 </h2>
-                <div id="flush-collapseZero" class="accordion-collapse collapse show" aria-labelledby="flush-headingZero" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseZero" class="accordion-collapse collapse" aria-labelledby="flush-headingZero" data-bs-parent="#accordionFlushExample">
                     <div class="row align-items-lg-center">
                         <div class="col-12 row">
                             <div class="col-6">
