--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Parcivad launched in the <span>Web</span>
                 </h1>
                 <p>
-                    Diese Seite gehört Parcivad, aka Timur Stegmann. Hier kannst du Information über neue Projekte,
+                    Diese Seite gehört Parcivad. Hier kannst du Information über neue Projekte,
                     Produkte oder andere Tools und Daten  finden. Falls du dich mehr für die Programmierung
                     interessiert kannst du dich auf meinem
                     <a class="custom-link" href="https://github.com/parcivad">Github</a>
