--- a/index.html
+++ b/index.html
@@ -51,21 +51,73 @@
             </div>
         </div>
     </div>
+    <!--Tools Article-->
+    <div class="container-fluid article-plugins-start"></div>
+    <div class="container-fluid bg-dark">
+        <div class="container px-4 md-3 article-area text-light bg-dark">
+            <div class="row align-items-lg-center">
+                <div class="col-7 mx-auto col-md-5 order-1 col-lg-5 text-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60%" fill="currentColor" class="bi bi-qr-code-scan" viewBox="0 0 16 16">
+                        <path d="M0 .5A.5.5 0 0 1 .5 0h3a.5.5 0 0 1 0 1H1v2.5a.5.5 0 0 1-1 0v-3Zm12 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0V1h-2.5a.5.5 0 0 1-.5-.5ZM.5 12a.5.5 0 0 1 .5.5V15h2.5a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .5-.5Zm15 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1 0-1H15v-2.5a.5.5 0 0 1 .5-.5ZM4 4h1v1H4V4Z"/>
+                        <path d="M7 2H2v5h5V2ZM3 3h3v3H3V3Zm2 8H4v1h1v-1Z"/>
+                        <path d="M7 9H2v5h5V9Zm-4 1h3v3H3v-3Zm8-6h1v1h-1V4Z"/>
+                        <path d="M9 2h5v5H9V2Zm1 1v3h3V3h-3ZM8 8v2h1v1H8v1h2v-2h1v2h1v-1h2v-1h-3V8H8Zm2 2H9V9h1v1Zm4 2h-1v1h-2v1h3v-2Zm-4 2v-1H8v1h2Z"/>
+                        <path d="M12 9h2V8h-2v1Z"/>
+                    </svg>
+                </div>
+                <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
+                    <h1 class="title-de">
+                        Parcivad <span style="color: #8f22c9;">Tools</span>
+                    </h1>
+                    <p>
+                        Erstelle schnell und einfach QR-Codes mit den
+                        <a class="custom-link" href="/tools/">Tools</a> von Parcivad.
+                    </p>
+                    <p>
+                        Zudem kannst du viele weitere Funktionen nutzen.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid article-plugins-end"></div>
     <!--Latin Vocabulary List Article-->
     <div class="container-fluid" style="margin-top: 12px">
         <div class="container px-4 md-3 article-area">
             <div class="row align-items-lg-center">
-                <div class="col-7 mx-auto col-md-5 col-lg-5">
+                <div class="col-7 mx-auto col-md-5 col-lg-5 text-start">
                     <img class="" width="100%" alt="animated book gif" src="/img/home/book.gif">
                 </div>
                 <div class="col-md-9  col-lg-7 align-items-center text-md-start">
                     <h1 class="title-de">
-                        Latin <span>Vocabulary</span>
+                        Latin <span style="color: rgb(35, 198, 198);">Vocabulary</span>
                     </h1>
                     <p>
                         Die Latein Vokablen für die Tests können jetzt unter dem Reiter
                         <a class="custom-link" href="/school/">School</a>
                         eingesehen werden.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Loewenrot App Article-->
+    <div class="container-fluid" style="margin-top: 12px">
+        <div class="container px-4 md-3 article-area">
+            <div class="row align-items-lg-center">
+                <div class="col-7 order-lg-2 mx-auto col-md-5 col-lg-5 text-end">
+                    <img class="" width="70%" alt="animated book gif" src="/img/home/loewenrot.svg">
+                </div>
+                <div class="col-md-9 order-lg-1 col-lg-7 align-items-center text-md-start">
+                    <h1 class="title-de">
+                        <span style="color: rgb(224, 19, 39);">Löwenrot</span>-Gymnasium App
+                    </h1>
+                    <p>
+                        Mithilfe der
+                        <a class="custom-link" href="https://loewenrot-gymnasium.de/schulgemeinschaft/schueler/smv/">SMV</a>
+                        versuchen wir einen neuen Anlauf auf eine Löwenrot-App.
+                        Diese App soll dann den Vertretungsplan für alle Schüler zugänglich machen, sowie andere
+                        praktische Funktionen bieten. Während der geforderte Datenschutz respektiert wird.
                     </p>
                 </div>
             </div>
