--- a/modules/header.html
+++ b/modules/header.html
@@ -19,16 +19,16 @@
                     <a class="nav-link" href="/school/">School</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Social</a>
+                    <a class="nav-link" href="/social/">Social</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tools</a>
+                    <a class="nav-link" href="/tools/">Tools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/products/">Parcivad Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">End</a>
+                    <a class="nav-link" href="/end/">End</a>
                 </li>
             </ul>
         </div>
