--- a/404.html
+++ b/404.html
@@ -36,10 +36,11 @@
         <p>
             Jagut keine Ahnung wie du hier gelandet bist?!
         </p>
-        <img src="/img/404/han-solo.gif">
-        <img src="/img/404/chewbacca.gif">
-        <div class="w-100"></div>
-        <img src="/img/404/boom.gif">
+        <div class="row row-cols-2">
+            <img class="col-6" height="50%" width="100%" src="/img/404/han-solo.gif">
+            <img class="col-6" height="50%" width="100%" src="/img/404/chewbacca.gif">
+            <img class="col-12" src="/img/404/boom.gif">
+        </div>
     </div>
 </main>
 
