removed boom gif

--- a/404.html
+++ b/404.html
@@ -34,12 +34,11 @@
             404 <span>Error</span>
         </h1>
         <p>
-            Jagut keine Ahnung wie du hier gelandet bist?!
+            Ja gut keine Ahnung wie du hier gelandet bist?!
         </p>
         <div class="row row-cols-2">
-            <img class="col-6" height="50%" width="100%" src="/img/404/han-solo.gif">
-            <img class="col-6" height="50%" width="100%" src="/img/404/chewbacca.gif">
-            <img class="col-12" src="/img/404/boom.gif">
+            <img class="col-6 align-self-end" src="/img/404/han-solo.gif">
+            <img class="col-6 align-self-start" src="/img/404/chewbacca.gif">
         </div>
     </div>
 </main>
