--- a/index.html
+++ b/index.html
@@ -51,6 +51,31 @@
             </div>
         </div>
     </div>
+
+
+    <!--Products Article-->
+    <div class="container-fluid" style="margin-top: 12px">
+        <div class="container px-4 md-3 article-area">
+            <div class="row align-items-lg-center">
+                <div class="col-7 col-md-5 col-lg-5 text-center">
+                    <img width="300" alt="searching on laptop" src="/img/home/laptop-searching.gif">
+                </div>
+                <div class="col-md-9 col-lg-7 align-items-center text-md-start">
+                    <h2 class="title-de">
+                        Products, Plugins and APIs
+                    </h2>
+                    <p>
+                        Falls du an meinen Plugins oder APIs interessiert bist kannst du dich auf der
+                        <a class="custom-link" href="/products/">Parcivad Products</a>
+                        Seite umschauen.
+                    </p>
+                    <p>
+                        Dort findest du eine Auflistung an bereits existierenden Plugins.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--Minecraft Article-->
     <div class="container-fluid article-mc-start"></div>
     <div class="container-fluid bg-dark">
@@ -96,28 +121,6 @@
             </div>
         </div>
     </div>
-    <!--Loewenrot App Article-->
-    <div class="container-fluid" style="margin-top: 12px">
-        <div class="container px-4 md-3 article-area">
-            <div class="row align-items-lg-center">
-                <div class="col-7 order-lg-2 mx-auto col-md-5 col-lg-5 text-end">
-                    <img class="" width="70%" alt="animated book gif" src="/img/home/loewenrot.svg">
-                </div>
-                <div class="col-md-9 order-lg-1 col-lg-7 align-items-center text-md-start">
-                    <h1 class="title-de">
-                        <span style="color: rgb(224, 19, 39);">Löwenrot</span>-Gymnasium App
-                    </h1>
-                    <p>
-                        Mithilfe der
-                        <a class="custom-link" href="https://loewenrot-gymnasium.de/schulgemeinschaft/schueler/smv/">SMV</a>
-                        versuchen wir einen neuen Anlauf auf eine Löwenrot-App.
-                        Diese App soll dann den Vertretungsplan für alle Schüler zugänglich machen, sowie andere
-                        praktische Funktionen bieten. Während der geforderte Datenschutz respektiert wird.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
     <!--Tools Article-->
     <div class="container-fluid article-plugins-start"></div>
     <div class="container-fluid bg-dark">
@@ -134,14 +137,15 @@
                 </div>
                 <div class="col-md-9 order-2 col-lg-7 align-items-center text-md-start">
                     <h1 class="title-de">
-                        Parcivad <span style="color: #8f22c9;">Tools</span>
+                        Parcivad <span style="color: #562af6;">Tools & Social</span>
                     </h1>
                     <p>
-                        Erstelle schnell und einfach QR-Codes mit den
-                        <a class="custom-link" href="/tools/">Tools</a> von Parcivad.
+                        Gerade arbeite ich noch an praktischen
+                        <a class="custom-link" href="/tools/">Tools</a> und
+                        <a class="custom-link" href="/social/">Social</a> Funktionen.
                     </p>
                     <p>
-                        Zudem kannst du viele weitere Funktionen nutzen.
+                        Bei Vorschlägen kannst du dich gerne auf meinem Discord Server melden.
                     </p>
                 </div>
             </div>
