--- a/modules/header.html
+++ b/modules/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark bd-navbar shadow-lg" style="opacity: 0.95" >
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark bd-navbar shadow-lg" style="--bs-bg-opacity: 0.95;">
     <div class="container">
         <div class="col-2">
             <a class="navbar-brand" href="/">
