Separated script to js file

--- a/school/index.html
+++ b/school/index.html
@@ -198,18 +198,7 @@
 <footer id="footer"></footer>
 
 <script src="/js/jquery-3.6.0.min.js"></script>
-<script>
-    $(function () {
-        // header
-        fetch('/modules/header.html')
-            .then(response=> response.text())
-            .then(text=> document.getElementById('header').innerHTML = text);
-        // header
-        fetch('/modules/footer.html')
-            .then(response=> response.text())
-            .then(text=> document.getElementById('footer').innerHTML = text);
-    });
-</script>
+<script src="/js/loader.js"></script>
 
 </body>
 </html>
