--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Description Meta tags-->
     <meta name="title" content="Parcivad's Website">
     <meta name="description"
-          content="A website that provides direct data & information from Löwenrot-Gymnasium and Parcivad activities.">
+          content="Start Site of parcivads Website ;D">
 
     <!--Bootstrap CSS-->
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
