--- a/products/index.html
+++ b/products/index.html
@@ -15,7 +15,7 @@
     <!--Description Meta tags-->
     <meta name="title" content="Parcivads Website">
     <meta name="description"
-          content="Parcivad.de is a website to use tools from parcivad">
+          content="Nice and fresh overview about my projects, plugins and apis">
 
     <!--Bootstrap CSS-->
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
