--- a/products/index.html
+++ b/products/index.html
@@ -43,7 +43,7 @@
                 <p>
                     Hier kannst du eine Liste von Produkten, Plugins oder APIs finden. Diese stehen entweder öffentlich
                     zur Verfügung oder können über eine Spende freigeschaltet werden. Die Plugins kommen aus den Bereichen
-                    PHP, Javascript, Java oder Phython. Falls du bestimmte Plugins hier nicht findest, solltest du nochmal
+                    PHP, Javascript, Java oder Phython. Falls du bestimmte Plugins hier nicht findest solltest du nochmal
                     bei Github nachschauen. Bei APIs ist neben der Dokumentation auch eine Kennzeichnung zu finden
                     ob diese öffentlich nutzbar sind.
                 </p>
