--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </h1>
                 <p>
                     Diese Seite gehört Parcivad. Hier kannst du Information über neue Projekte,
-                    Produkte oder andere Tools und Daten  finden. Falls du dich mehr für die Programmierung
-                    interessiert kannst du dich auf meinem
+                    Produkte oder andere Tools und Daten finden. Falls du dich mehr für die Programmierung
+                    interessiert, kannst du dich auf meinem
                     <a class="custom-link" href="https://github.com/parcivad">Github</a>
                     Konto umsehen.
                 </p>
